--- a/.gitignore
+++ b/.gitignore
@@ -205,7 +205,7 @@ PublishScripts/
 # NuGet v3's project.json files produces more ignorable files
 *.nuget.props
 *.nuget.targets
-*/.feature.cs
+*.feature.cs
 
 # Microsoft Azure Build Output
 csx/
