--- a/specs/UOM.Specs/UOM.Specs.csproj
+++ b/specs/UOM.Specs/UOM.Specs.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="SpecFlow" Version="3.9.22" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.22" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.9.22" />
+    <PackageReference Include="suzianna.core" Version="1.1.0" />
+    <PackageReference Include="suzianna.rest" Version="1.1.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
