--- a/specs/UOM.Specs/UOM.Specs.csproj
+++ b/specs/UOM.Specs/UOM.Specs.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,16 +10,20 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="fluentassertions" Version="6.2.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="restsharp" Version="106.13.0" />
-    <PackageReference Include="SpecFlow" Version="3.9.22" />
-    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.22" />
-    <PackageReference Include="SpecFlow.xUnit" Version="3.9.22" />
-    <PackageReference Include="suzianna.core" Version="1.1.0" />
-    <PackageReference Include="suzianna.rest" Version="1.1.0" />
+    <PackageReference Include="SpecFlow" Version="3.9.40" />
+    <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.9.40" />
+    <PackageReference Include="SpecFlow.xUnit" Version="3.9.40" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\UOM.Specs.Shared\UOM.Specs.Shared.csproj" />
+    <ProjectReference Include="..\UOM.Technical.Rest\UOM.Technical.Rest.csproj" />
+    <ProjectReference Include="..\UOM.Technical.WebUI\UOM.Technical.WebUI.csproj" />
   </ItemGroup>
 </Project>
